test/compile-fail/ret__main_value_type_error.he
fn main
{
    ret "a string"; //~ ERROR 3001
}
